--- a/.github/workflows/build-mini-bot-remnawave.yml
+++ b/.github/workflows/build-mini-bot-remnawave.yml
@@ -34,7 +34,7 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: ghcr.io/${{ github.repository_owner }}/remna-mini-bot
+          images: ghcr.io/${{ github.repository_owner }}/remnawave-mini-bot
           flavor: latest=true
           tags: |
             type=sha
