--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ yarn-debug.log*
 yarn-error.log*
 
 # local env files
+.env
 .env*.local
 
 # vercel
@@ -36,6 +37,7 @@ yarn-error.log*
 next-env.d.ts
 
 .idea
+
 
 certificates!/certificates/
 !/.env
