--- a/.github/workflows/build-mini-bot-remnawave.yml
+++ b/.github/workflows/build-mini-bot-remnawave.yml
@@ -37,8 +37,8 @@ jobs:
           images: ghcr.io/${{ github.repository_owner }}/remnawave-mini-bot
           tags: |
             type=raw,value=latest
-            type=raw,value=${{ github.ref_name }}
 
+      # Сборка и пуш
       - name: Build and push
         uses: docker/build-push-action@v6
         with:
