--- a/.github/workflows/build-mini-bot-remnawave.yml
+++ b/.github/workflows/build-mini-bot-remnawave.yml
@@ -1,11 +1,10 @@
-name: Build Remna Sub Telegram Mini App Docker Image
+name: Build Docker Image
 
 on:
   push:
     tags:
-      - '*'
-
-  workflow_dispatch:
+      - 'v*.*.*'     # Для production теги (например, v1.0.0)
+      - 'dev-*'      # Для dev-сборок по тегам, начинающимся на dev-
 
 jobs:
   build-docker-image:
@@ -13,7 +12,8 @@ jobs:
     permissions:
       packages: write
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout code
+        uses: actions/checkout@v4
         with:
           fetch-depth: 0
 
@@ -35,17 +35,14 @@ jobs:
         with:
           images: ghcr.io/${{ github.repository_owner }}/remnawave-telegram-sub-mini-app
           tags: |
-            type=raw,value=latest,enable=${{ github.ref_type == 'tag' }}
-            type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-            type=sha,format=short,prefix=
-            type=raw,value=dev-latest,enable=${{ github.ref_name == 'dev' }}
+            type=raw,value=dev-latest,enable=${{ startsWith(github.ref_name, 'dev-') }}
+            type=raw,value=${{ github.ref_name }},enable=${{ startsWith(github.ref_name, 'dev-') }}
+            type=raw,value=latest,enable=${{ startsWith(github.ref_name, 'v') }}
+            type=semver,pattern={{version}},enable=${{ startsWith(github.ref_name, 'v') }}
+            type=semver,pattern={{major}},enable=${{ startsWith(github.ref_name, 'v') }}
+            type=semver,pattern={{major}}.{{minor}},enable=${{ startsWith(github.ref_name, 'v') }}
 
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
-      - name: Build and push
+      - name: Build and Push Docker Image
         uses: docker/build-push-action@v6
         with:
           platforms: linux/amd64,linux/arm64
