--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
     "pretty-bytes": "^6.1.1",
     "react": "^18",
     "react-dom": "^18",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "uqr": "^0.1.2"
   },
   "devDependencies": {
     "@mantine/core": "^7.17.3",
