chore: update dependencies and refactor user data handling
- Added new dependencies: `@remnawave/backend-contract` and `axios`.
- Updated `.gitignore` to include `.env` file.
- Refactored `fetchUserByTelegramId` to return a more structured response.
- Updated `SubscriptionInfoWidget` and `InstallationGuideWidget` to use the new user data structure.
- Removed deprecated `IUserData` type and related code.
- Improved error handling in API routes

--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@remnawave/backend-contract": "0.7.9",
     "@tabler/icons-react": "^3.31.0",
     "@telegram-apps/sdk-react": "^2.0.22",
+    "axios": "^1.9.0",
     "dotenv": "^16.4.7",
     "eruda": "^3.0.1",
     "lottie-react": "^2.4.1",
