feat: hide unsupported apps when CRYPTO_LINK is enabled
When CRYPTO_LINK is enabled, applications that don't support encrypted links
will now be filtered out from the connection instructions. Added an error
message to notify users about compatibility issues.

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "useownmini",
-  "version": "0.1.0",
+  "name": "remnawave-telegram-sub-mini-app",
+  "version": "1.3.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
