--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "remnawave-telegram-sub-mini-app",
-  "version": "1.3.0",
+  "version": "1.9.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
@@ -24,24 +24,28 @@
     "dotenv": "^16.4.7",
     "eruda": "^3.0.1",
     "lottie-react": "^2.4.1",
-    "next": "14.2.4",
+    "next": "15.4.5",
     "next-intl": "^3.17.6",
     "ofetch": "^1.4.1",
     "postcss": "^8.5.3",
     "postcss-preset-mantine": "^1.17.0",
     "postcss-simple-vars": "^7.0.1",
     "pretty-bytes": "^6.1.1",
-    "react": "^18",
-    "react-dom": "^18",
+    "react": "19.1.1",
+    "react-dom": "19.1.1",
     "react-icons": "^5.5.0",
     "uqr": "^0.1.2"
   },
   "devDependencies": {
     "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
+    "@types/react": "19.1.9",
+    "@types/react-dom": "19.1.7",
     "eslint": "^8",
-    "eslint-config-next": "14.2.4",
+    "eslint-config-next": "15.4.5",
     "typescript": "^5"
+  },
+  "overrides": {
+    "@types/react": "19.1.9",
+    "@types/react-dom": "19.1.7"
   }
 }
