•	Added: App config support for Remnawave 2.10 and higher 	•	Fixed: Opening download links in the Telegram web version 	•	Fixed: Line breaks in instructions using \n 	•	Updated: Next.js to the latest version 15.4

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@tabler/icons-react": "^3.31.0",
     "@telegram-apps/sdk-react": "^2.0.22",
     "axios": "^1.9.0",
+    "consola": "^3.4.2",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "eruda": "^3.0.1",
