--- a/public/assets/app-config.json
+++ b/public/assets/app-config.json
@@ -5,7 +5,7 @@
     ],
     "branding": {
       "name": "Subscription",
-      "logoUrl": "https://remna.st/img/logo.svg",
+      "logoUrl": "https://s2.cloudteams.lol/assets/logo.jpg",
       "supportUrl": "https://t.me"
     }
   },
